fix(docs): changed table cell vertical align (#DS-3349)

--- a/apps/docs/src/styles/_design-tokens.scss
+++ b/apps/docs/src/styles/_design-tokens.scss
@@ -56,7 +56,7 @@
 }
 
 .kbq-markdown__table .kbq-markdown__tr .kbq-markdown__td {
-    vertical-align: middle;
+    vertical-align: baseline;
 }
 
 // standard breakpoint
